removed all of the fontcfg contents, will repopulate later

--- a/fontcfg/KA New Stathis.yml
+++ b/fontcfg/KA New Stathis.yml
@@ -18,874 +18,14 @@ fonts:
     alias:  Chronos
 
 shorthand-to-char:
-  ## KA New Stathis Main
+  # Removed all contents except this one
+  # which only exists to demonstrate the
+  # structure this document is meant to have
+  #
+  # Can't repopulate this document until
+  # the abstractnames scratchpad is finished
+  # (at least for the shorthand names)
   - in: klasD
     out:
       - char: "A"
         font: Main
-
-  - in: klasL
-    out:
-      - char: "a"
-        font: Main
-
-  - in: hapl
-    out:
-      - char: "D"
-        font: Main
-
-  - in: klas
-    out:
-      - char: "d"
-        font: Main
-
-  - in: diplR
-    out:
-      - char: "F"
-        font: Main
-
-  - in: dipl
-    out:
-      - char: "f"
-        font: Main
-
-  - in: tripR
-    out:
-      - char: "G"
-        font: Main
-
-  - in: trip
-    out:
-      - char: "g"
-        font: Main
-
-  - in: tetrR
-    out:
-      - char: "H"
-        font: Main
-
-  - in: tetr
-    out:
-      - char: "h"
-        font: Main
-
-  - in: antiD2
-    out:
-      - char: "J"
-        font: Main
-
-  - in: anti
-    out:
-      - char: "j"
-        font: Main
-
-  - in: akaplD2
-    out:
-      - char: "K"
-        font: Main
-
-  - in: akapl
-    out:
-      - char: "k"
-        font: Main
-
-  - in: akaplR
-    out:
-      - char: "l"
-        font: Main
-
-  - in: psklasR
-    out:
-      - char: "M"
-        font: Main
-
-  - in: psklas
-    out:
-      - char: "m"
-        font: Main
-
-  - in: psefD2
-    out:
-      - char: "N"
-        font: Main
-
-  - in: psef
-    out:
-      - char: "n"
-        font: Main
-
-  - in: klasDR
-    out:
-      - char: "S"
-        font: Main
-
-  - in: klasR
-    out:
-      - char: "s"
-        font: Main
-
-  - in: hete
-    out:
-      - char: "["
-        font: Main
-
-  - in: endo
-    out:
-      - char: "]"
-        font: Main
-
-  - in: heteD2
-    out:
-      - char: "{"
-        font: Main
-
-  - in: barlU
-    out:
-      - char: "|"
-        font: Main
-
-  - in: barlUL
-    out:
-      - char: "}"
-        font: Main
-
-  - in: kent
-    out:
-      - char: "~"
-        font: Main
-
-  - in: barlUR
-    out:
-      - char: "«"
-        font: Main
-
-  - in: klasU1.1L0.9
-    out:
-      - char: "å"
-        font: Main
-
-  - in: diplDR1.5
-    out:
-      - char: "ƒ"
-        font: Main
-
-  - in: akaplD1.5
-    out:
-      - char: "˚"
-        font: Main
-
-  - in: spsef
-    out:
-      - char: "‘"
-        font: Main
-
-  - in: heteD2R2
-    out:
-      - char: "“"
-        font: Main
-
-  - in: heteD3
-    out:
-      - char: "”"
-        font: Main
-
-  - in: haplDR
-    out:
-      - char: "∂"
-        font: Main
-
-  - in: coro
-    out:
-      - char: "≠"
-        font: Main
-
-  - in: homa
-    out:
-      - char: "'"
-        font: Main
-
-  - in: homaD2R
-    out:
-      - char: ":"
-        font: Main
-
-  - in: homaR
-    out:
-      - char: ";"
-        font: Main
-
-  - in: lpsef
-    out:
-      - char: "B"
-        font: Main
-
-  - in: olapelken2
-    out:
-      - char: "C"
-        font: Main
-
-  - in: petapel
-    out:
-      - char: "E"
-        font: Main
-
-  - in: pethh
-    out:
-      - char: "I"
-        font: Main
-
-  - in: apoapo
-    out:
-      - char: "L"
-        font: Main
-
-  - in: petapohh
-    out:
-      - char: "O"
-        font: Main
-
-  - in: isoapo
-    out:
-      - char: "P"
-        font: Main
-
-  - in: petapo
-    out:
-      - char: "Q"
-        font: Main
-
-  - in: peth
-    out:
-      - char: "R"
-        font: Main
-
-  - in: petapoh
-    out:
-      - char: "T"
-        font: Main
-
-  - in: petapelh
-    out:
-      - char: "U"
-        font: Main
-
-  - in: olsyneken2
-    out:
-      - char: "V"
-        font: Main
-
-  - in: petel
-    out:
-      - char: "W"
-        font: Main
-
-  - in: olapoken2
-    out:
-      - char: "X"
-        font: Main
-
-  - in: petelh
-    out:
-      - char: "Y"
-        font: Main
-
-  - in: olken2
-    out:
-      - char: "Z"
-        font: Main
-
-  - in: olhken2
-    out:
-      - char: "b"
-        font: Main
-
-  - in: olelken2
-    out:
-      - char: "c"
-        font: Main
-
-  - in: petken
-    out:
-      - char: "e"
-        font: Main
-
-  - in: pethyhy
-    out:
-      - char: "i"
-        font: Main
-
-  - in: petkenhyhy
-    out:
-      - char: "o"
-        font: Main
-
-  - in: petiso
-    out:
-      - char: "p"
-        font: Main
-
-  - in: peta
-    out:
-      - char: "q"
-        font: Main
-
-  - in: pethy
-    out:
-      - char: "r"
-        font: Main
-
-  - in: pethyL
-    out:
-      - char: "t"
-        font: Main
-
-  - in: petkenhyU2
-    out:
-      - char: "u"
-        font: Main
-
-  - in: olhypoken2
-    out:
-      - char: "v"
-        font: Main
-
-  - in: petol
-    out:
-      - char: "w"
-        font: Main
-
-  - in: olisoken2
-    out:
-      - char: "x"
-        font: Main
-
-  - in: petkenhy
-    out:
-      - char: "y"
-        font: Main
-
-  - in: olken2DR
-    out:
-      - char: "z"
-        font: Main
-
-  - in: olken2D
-    out:
-      - char: "Ω"
-        font: Main
-
-  - in: olkentDR
-    out:
-      - char: "™"
-        font: Main
-
-  - in: iso
-    out:
-      - char: "0"
-        font: Main
-
-  - in: olig
-    out:
-      - char: "1"
-        font: Main
-
-  - in: olkenD
-    out:
-      - char: "2"
-        font: Main
-
-  - in: olken
-    out:
-      - char: "3"
-        font: Main
-
-  - in: olhy
-    out:
-      - char: "4"
-        font: Main
-
-  - in: olhyL
-    out:
-      - char: "5"
-        font: Main
-
-  - in: olkenhy
-    out:
-      - char: "6"
-        font: Main
-
-  - in: olkenhyU2
-    out:
-      - char: "7"
-        font: Main
-
-  - in: olhyhy
-    out:
-      - char: "8"
-        font: Main
-
-  - in: olkenhyhy
-    out:
-      - char: "9"
-        font: Main
-
-  - in: apos
-    out:
-      - char: "!"
-        font: Main
-
-  - in: elaf
-    out:
-      - char: "@"
-        font: Main
-
-  - in: apel
-    out:
-      - char: "#"
-        font: Main
-
-  - in: cham
-    out:
-      - char: "$"
-        font: Main
-
-  - in: apoh
-    out:
-      - char: "%"
-        font: Main
-
-  - in: elh
-    out:
-      - char: "^"
-        font: Main
-
-  - in: apelh
-    out:
-      - char: "&"
-        font: Main
-
-  - in: hh
-    out:
-      - char: "*"
-        font: Main
-
-  - in: apohh
-    out:
-      - char: "("
-        font: Main
-
-  - in: hypo
-    out:
-      - char: "-"
-        font: Main
-
-  - in: syne
-    out:
-      - char: "_"
-        font: Main
-
-  - in: ken2
-    out:
-      - char: "`"
-        font: Main
-
-  - in: stav
-    out:
-      - char: "+"
-        font: Main
-
-  - in: brea
-    out:
-      - char: "="
-        font: Main
-
-  - in: rest2
-    out:
-      - char: "<"
-        font: Main
-
-  - in: rest
-    out:
-      - char: ","
-        font: Main
-
-  - in: rest4
-    out:
-      - char: ">"
-        font: Main
-
-  - in: rest3
-    out:
-      - char: "."
-        font: Main
-
-  - in: vare
-    out:
-      - char: "/"
-        font: Main
-
-  - in: restg
-    out:
-      - char: "?"
-        font: Main
-
-  - in: barl
-    out:
-      - char: "\\"
-        font: Main
-
-  ## KA New Stathis Martyria
-  - in: martpaU
-    out:
-      - char: "!"
-        font: Martyria
-
-  - in: martgaU
-    out:
-      - char: "#"
-        font: Martyria
-
-  - in: martdiU
-    out:
-      - char: "$"
-        font: Martyria
-
-  - in: martkeU
-    out:
-      - char: "%"
-        font: Martyria
-
-  - in: martniU
-    out:
-      - char: "&"
-        font: Martyria
-
-  - in: chronf3
-    out:
-      - char: ","
-        font: Martyria
-
-  - in: plagal
-    out:
-      - char: "/"
-        font: Martyria
-
-  - in: lowmartpa
-    out:
-      - char: "1"
-        font: Martyria
-
-  - in: lowmartvou
-    out:
-      - char: "2"
-        font: Martyria
-
-  - in: lowmartga
-    out:
-      - char: "3"
-        font: Martyria
-
-  - in: lowmartdi
-    out:
-      - char: "4"
-        font: Martyria
-
-  - in: lowmartke
-    out:
-      - char: "5"
-        font: Martyria
-
-  - in: lowmartzo
-    out:
-      - char: "6"
-        font: Martyria
-
-  - in: lowmartni
-    out:
-      - char: "7"
-        font: Martyria
-
-  - in: chronf3U
-    out:
-      - char: "<"
-        font: Martyria
-
-  - in: martvouU
-    out:
-      - char: "@"
-        font: Martyria
-
-  - in: marthchrompaU
-    out:
-      - char: "A"
-        font: Martyria
-
-  - in: chronmU
-    out:
-      - char: "B"
-        font: Martyria
-
-  - in: chrons2U
-    out:
-      - char: "C"
-        font: Martyria
-
-  - in: martschromdiU
-    out:
-      - char: "D"
-        font: Martyria
-
-  - in: martdiagaU
-    out:
-      - char: "E"
-        font: Martyria
-
-  - in: martschromkeU
-    out:
-      - char: "F"
-        font: Martyria
-
-  - in: zygosC
-    out:
-      - char: "G"
-        font: Martyria
-
-  - in: klitonC
-    out:
-      - char: "H"
-        font: Martyria
-
-  - in: plfirst
-    out:
-      - char: "I"
-        font: Martyria
-
-  - in: spathiC
-    out:
-      - char: "J"
-        font: Martyria
-
-  - in: chronf2U
-    out:
-      - char: "M"
-        font: Martyria
-
-  - in: chronfU
-    out:
-      - char: "N"
-        font: Martyria
-
-  - in: plsecondschrom
-    out:
-      - char: "O"
-        font: Martyria
-
-  - in: gravemode
-    out:
-      - char: "P"
-        font: Martyria
-
-  - in: martdiapaU
-    out:
-      - char: "Q"
-        font: Martyria
-
-  - in: martdiadiU
-    out:
-      - char: "R"
-        font: Martyria
-
-  - in: marthchromdiU
-    out:
-      - char: "S"
-        font: Martyria
-
-  - in: martdiakeU
-    out:
-      - char: "T"
-        font: Martyria
-
-  - in: martdianiU
-    out:
-      - char: "U"
-        font: Martyria
-
-  - in: chronsU
-    out:
-      - char: "V"
-        font: Martyria
-
-  - in: martdiavouU
-    out:
-      - char: "W"
-        font: Martyria
-
-  - in: chrons3U
-    out:
-      - char: "X"
-        font: Martyria
-
-  - in: martdiazoU
-    out:
-      - char: "Y"
-        font: Martyria
-
-  - in: chrons4U
-    out:
-      - char: "Z"
-        font: Martyria
-
-  - in: fourthmode
-    out:
-      - char: "["
-        font: Martyria
-
-  - in: martzoU
-    out:
-      - char: "^"
-        font: Martyria
-
-  - in: martprime
-    out:
-      - char: "`"
-        font: Martyria
-
-  - in: marthchrompa
-    out:
-      - char: "a"
-        font: Martyria
-
-  - in: chronm
-    out:
-      - char: "b"
-        font: Martyria
-
-  - in: chrons2
-    out:
-      - char: "c"
-        font: Martyria
-
-  - in: martschromdi
-    out:
-      - char: "d"
-        font: Martyria
-
-  - in: martdiaga
-    out:
-      - char: "e"
-        font: Martyria
-
-  - in: martschromke
-    out:
-      - char: "f"
-        font: Martyria
-
-  - in: zygos
-    out:
-      - char: "g"
-        font: Martyria
-
-  - in: kliton
-    out:
-      - char: "h"
-        font: Martyria
-
-  - in: firstmode
-    out:
-      - char: "i"
-        font: Martyria
-
-  - in: spathi
-    out:
-      - char: "j"
-        font: Martyria
-
-  - in: chronf2
-    out:
-      - char: "m"
-        font: Martyria
-
-  - in: chronf
-    out:
-      - char: "n"
-        font: Martyria
-
-  - in: secondmode
-    out:
-      - char: "o"
-        font: Martyria
-
-  - in: thirdmodenana
-    out:
-      - char: "p"
-        font: Martyria
-
-  - in: martdiapa
-    out:
-      - char: "q"
-        font: Martyria
-
-  - in: martdiadi
-    out:
-      - char: "r"
-        font: Martyria
-
-  - in: marthchromdi
-    out:
-      - char: "s"
-        font: Martyria
-
-  - in: martdiake
-    out:
-      - char: "t"
-        font: Martyria
-
-  - in: martdiani
-    out:
-      - char: "u"
-        font: Martyria
-
-  - in: chrons
-    out:
-      - char: "v"
-        font: Martyria
-
-  - in: martdiavou
-    out:
-      - char: "w"
-        font: Martyria
-
-  - in: chrons3
-    out:
-      - char: "x"
-        font: Martyria
-
-  - in: martdiazo
-    out:
-      - char: "y"
-        font: Martyria
-
-  - in: chrons4
-    out:
-      - char: "z"
-        font: Martyria
-
-  - in: plfourth
-    out:
-      - char: "{"
-        font: Martyria
-
-  - in: martprimeU
-    out:
-      - char: "~"
-        font: Martyria
-
-  - in: thirdmode
-    out:
-      - char: "π"
-        font: Martyria
-
-  - in: legetos
-    out:
-      - char: "“"
-        font: Martyria
